# solar_tracking

./: .gitignore  LICENSE  README.md  _download_fits.py  pyproject.toml  requirements.txt  setup.py  solar_tracker.ipynb  test_tracking.py
docs/: README.md
solar_tracking/: cli.py  downloader.py  fitting.py  image_processing.py  plotting.py  rotation_analysis.py  sunspot_detection.py  tracking.py
tests/: downloader_test.py  image_processing_test.py  sun_info_test.py  test_find_spots_and_boxes.py
